# packet-binser

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  devenv.nix
packet-binser-derive/: Cargo.toml
packet-binser-derive/src/: binser.rs  lib.rs  packet.rs  packet_serde.rs
packet-binser-derive/tests/: compiles.rs  serialization.rs
src/: impls.rs  lib.rs  varint.rs
