[workspace]
members = ["packet-binser-derive"]

[package]
name = "packet-binser"
version = "0.2.0"
edition = "2021"
description = "Simple binary (de)serialization library with a main usecase of network packets"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/packet-binser"
repository = "https://git.sr.ht/~queer/packet-binser"

[features]
default = []
derive = ["packet-binser-derive"]
varint = ["residua-zigzag"]
variable-width-lengths = [
    "varint",
    "packet-binser-derive/variable-width-lengths",
]

[dependencies]
lbytes = "0.1.1"
paste = "1.0.15"
residua-zigzag = { version = "0.1.0", optional = true }
packet-binser-derive = { path = "./packet-binser-derive", version = "0.2.0", optional = true }
thiserror = "1.0.65"
