[package]
name = "packet-binser-derive"
version = "0.1.1"
edition = "2021"
description = "Simple binary (de)serialization library with a main usecase of network packets"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/packet-binser"
repository = "https://github.com/lillianrubyrose/packet-binser"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
packet-binser = { path = "../" }
